--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
             "type": "lldb",
             "request": "launch",
             "name": "Debug",
-            "program": "${workspaceFolder}/<executable file>",
+            "program": "${workspaceFolder}/target/debug/life-rs.exe",
             "args": [],
             "cwd": "${workspaceFolder}"
-        }
+        },
     ]
 }
